--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -82,6 +82,9 @@
 			}
 		}
 	}
+	.header{
+		z-index: 5;
+	}
 	.nav{
 		position: fixed;
 		width: 100%;
